--- a/client/package.json
+++ b/client/package.json
@@ -22,14 +22,14 @@
 		"together-ai": "^0.13.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.55",
-		"@types/react-dom": "^18.2.19",
+		"@eslint/js": "^8.57.0",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.21",
 		"eslint": "^8.56.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"globals": "^14.0.0",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^3.4.17",
 		"vite": "^5.1.3"
