--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@tensorflow/tfjs-node": "^4.22.0",
+    "@tensorflow/tfjs": "^4.22.0",
     "@types/dom-speech-recognition": "^0.0.6",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
