--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"lucide-react": "^0.344.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-feather": "^2.0.10",
 		"react-markdown": "^9.0.1",
 		"react-router-dom": "^6.22.1",
 		"react-syntax-highlighter": "^15.5.0",
